alpha-ns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpod
  namespace: alpha
  labels:
    app: testpod
spec:
  containers:
  - name: testcontainer
    image: nginx:latest
  restartPolicy: Never
