anno.yaml
apiVersion: v1
kind: Pod
metadata:
  name: annopod
  annotations:
    k8slink: "https://www.coursera.org/learn/exam-prep-cka-certified-kubernetes-administrator/lecture/Huz80/labels-selectors-and-annotations"
spec:
  containers:
  - name: labelcontainer
    image: nginx
    ports:
    - containerPort: 80
