deploy-curl-beta-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: beta
  name: beta


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-deployment
  namespace: beta
spec:
  replicas: 1
  selector:
    matchLabels:
      env: debug
  template:
    metadata:
      labels:
        env: debug
    spec:
      containers:
      - name: curl-container
        image: rancher/curlimages-curl:7.73.0
        command: ["/bin/sleep", "infinity"]
