deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: alpha
spec:
  replicas: 3
  selector:
    matchLabels:
      env: staging
      tier: frontend
  template:
    metadata:
      labels:
        env: staging
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
