env-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment
  namespace: alpha
spec:
  replicas: 
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: ubuntu
        image: ubuntu
        command: ["/bin/sleep", "infinity"]
      restartPolicy: Always
