hostpath-vol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deploy
  namespace: alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - name: ubuntu-container
        image: ubuntu
        command: ["/bin/sleep", "infinity"]
        volumeMounts:
        - name: hostpath-storage
          mountPath: /tmp/data
      volumes:
      - name: hostpath-storage
        hostPath:
          path: /tmp/hostpathDir
          type: DirectoryOrCreate
