labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: labelpod
  labels:
    env: staging
    tier: frontend
spec:
  containers:
  - name: labelcontainer
    image: nginx
    ports:
    - containerPort: 80
