pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
  labels:
    app: sample-app
spec:
  containers:
  - name: sample-container
    image: nginx:latest
    command: ['sh', '-c', 'echo Hello Kubernetes!! && sleep 60']
  restartPolicy: Never
