podwithcm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod2
  labels:
    name: cm-pod
spec:
  containers:
  - name: my-container
    image: nginx
    command:
     - sleep
     - "3600"
