podwithsecret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-pod
  labels:
    name: secret-pod
spec:
  replicas: 1
  selector:
    matchLabels:
       app: karun
  template:
    metadata:
      labels:
        app: karun
    spec:
      containers:
      - name: my-container
        image: nginx
        command:
        - sleep
        - "3600"
        volumeMounts:
        - name: secret-volume
          readOnly: true
          mountPath: "/etc/secret-volume"
      volumes:
      - name: secret-volume
        secret:
          secretName: secret2
