nginx-NP.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: alpha
spec:
  type: NodePort    
  selector:
    env: staging
  ports:
    - protocol: TCP
      nodePort: 30000
      port: 8000
      targetPort: 80
