nginx-ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: karun
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30010
      targetPort: 80
