nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: alpha
spec:
  selector:
    env: staging
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  type: ClusterIP
